--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ env:
   global:
     - COMMIT=${TRAVIS_COMMIT::7}
 
+script:
+  - mvn clean package
+
 after_success:
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
   - docker login -u="$DOCKER_USER" -p="$DOCKER_PASS"
@@ -24,7 +27,6 @@ after_success:
   - docker push $WEBSHOP_DB_IMAGE
 
   # LEGACY WEBSHOP
-  - mvn clean package
   - export LEGACY_WEBSHOP=mavogel/hska-vis-legacywebshop
   - docker build -t $LEGACY_WEBSHOP:$COMMIT .
   - docker tag $LEGACY_WEBSHOP:$COMMIT $LEGACY_WEBSHOP:$TAG
