builds the images now in a staged build in the compose file only

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,36 @@
-version: '2'
+version: '3.2'
 services:
- web-shop-db-image:
-   image: mavogel/hska-vis-web-shop-db-image
-   volumes:
-     - "./.data/db:/var/lib/mysql"
-   environment:
-     MYSQL_ROOT_PASSWORD: c8de110f37300a53a971749
-     MYSQL_DATABASE: webshop
-     MYSQL_USER: webshopuser
-     MYSQL_PASSWORD: 240b2c6d58ff2ce2f508b49f
-   ports:
-     - "3306:3306"
+  legacywebshop:
+    build:
+      context: ./
+      dockerfile: ./docker/Dockerfile
+    environment:
+      - WAIT_FOR=web-shop-db-image:3306
+    ports:
+      - "8888:8080"
+    networks:
+      local_dev_net:
+          aliases:
+              - legacywebshop
 
- legacywebshop:
-   image: mavogel/hska-vis-legacywebshop
-   depends_on:
-     - web-shop-db-image
-   links:
-     - web-shop-db-image
-   ports:
-     - "8888:8080"
+  web-shop-db-image:
+    build:
+      context: ./
+      dockerfile: ./docker/DockerfileMySQL
+    volumes:
+      - "./.data/db:/var/lib/mysql"
+    environment:
+      MYSQL_ROOT_PASSWORD: c8de110f37300a53a971749
+      MYSQL_DATABASE: webshop
+      MYSQL_USER: webshopuser
+      MYSQL_PASSWORD: 240b2c6d58ff2ce2f508b49f
+    ports:
+      - "3306:3306"
+    networks:
+        local_dev_net:
+            aliases:
+                - web-shop-db-image
+
+networks:
+  local_dev_net:
+    driver: bridge
