replaces all ADD with COPY in dockerfiles

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,6 +6,6 @@ RUN mvn clean package
 
 FROM tomcat:8.0
 COPY --from=builder /target/EShop-1.0.0.war /usr/local/tomcat/webapps/
-ADD ./conf/tomcat-users.xml /usr/local/tomcat/conf/
+COPY ./conf/tomcat-users.xml /usr/local/tomcat/conf/tomcat-users.xml
 
 EXPOSE 8080
